# python-tutorial-with-real-world-examples

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  POETRY_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECOMMENDED_ADDITIONS.md  output.txt  pyproject.toml  requirements.txt
00-python-essentials/: README.md
00-python-essentials/examples/: 01_variables_and_types.py  02_collections.py  03_control_flow.py  04_functions.py  05_error_handling.py  06_files_and_io.py  07_strings.py  08_http_and_apis.py
01-python-fundamentals/: README.md
01-python-fundamentals/examples/: 01_type_hints.py  02_decorators.py  03_context_managers.py  04_comprehensions_generators.py  05_data_model.py
01-python-fundamentals/project/: README.md
01-python-fundamentals/project/src/: llm_cache.py
02-async-python/: README.md
02-async-python/examples/: 01_async_basics.py  03_concurrent_execution.py  04_async_context_managers.py
03-math-for-ml/: README.md
03-math-for-ml/examples/: 01_probability_and_stats.py  02_linear_algebra.py  03_calculus_essentials.py  04_information_theory.py  05_practical_ml_statistics.py  06_scaling.py
04-numpy-pandas/: README.md
04-numpy-pandas/examples/: 01_numpy_basics.py  03_pandas_basics.py
05-feature-engineering/: README.md
05-feature-engineering/examples/: 01_numerical_features.py
06-machine-learning-fundamentals/: README.md
06-machine-learning-fundamentals/from_scratch/: 01_linear_regression.py  02_logistic_regression.py
07-deep-learning/: README.md
07-deep-learning/fundamentals/: 01_pytorch_basics.py  02_simple_cnn.py
08-llms-and-embeddings/: README.md
08-llms-and-embeddings/examples/: 01_embeddings_basics.py
09-rag-langchain/: README.md
09-rag-langchain/examples/: 01_rag_basics.py
10-deployment-production/: README.md
10-deployment-production/api_development/: 01_fastapi_ml_serving.py
10-deployment-production/containerization/: 01_docker_basics.py
10-deployment-production/monitoring_logging/: 01_model_monitoring.py
11-testing-ml-systems/: MODULE_SUMMARY.md  README.md  conftest.py
11-testing-ml-systems/integration_tests/: 01_end_to_end.py  02_mock_external_apis.py  04_performance_tests.py
11-testing-ml-systems/unit_tests/: 01_testing_basics.py  02_testing_models.py  03_testing_pipelines.py  04_testing_apis.py  05_data_validation.py
12-production-projects/: MODULE_12_SUMMARY.md  README.md
12-production-projects/rag_chatbot_complete/: .env.example  PROGRESS.md  README.md
12-production-projects/rag_chatbot_complete/app/: config.py  document_processor.py  models.py  vector_store.py
