[tool.poetry]
name = "python-mastery-tutorial"
version = "0.1.0"
description = "Python Mastery Tutorial for AI/ML Engineers - Real-world examples for senior engineers with Go/JavaScript/DevOps experience"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false
license = "MIT"
homepage = "https://github.com/yourusername/python-tutorial-with-real-world-examples"
keywords = ["python", "tutorial", "ai", "ml", "langchain", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"

# AI/ML Core Libraries
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.2"

# LLM & AI Libraries
openai = "^1.3.0"
anthropic = "^0.39.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.3.0"
langchain-community = "^0.3.0"

# Vector Databases & Embeddings
chromadb = "^0.4.18"
pinecone-client = "^2.2.4"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"

# API Development
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
httpx = "^0.25.2"
python-multipart = "^0.0.6"

# Data Processing
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pypdf = "^3.17.1"
python-docx = "^1.1.0"
tiktoken = "^0.7.0"

# Async & Concurrency
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"

# Utilities
python-dotenv = "^1.0.0"
rich = "^13.7.0"
tqdm = "^4.66.1"
loguru = "^0.7.2"
tenacity = "^8.2.3"

# AWS & Cloud
boto3 = "^1.29.0"
awscli = "^1.30.0"

# Monitoring & Observability
prometheus-client = "^0.19.0"
sentry-sdk = "^1.38.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"

# Code Quality
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

# Development Tools
ipython = "^8.18.0"
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.9"

# Type Stubs
types-requests = "^2.31.0"
types-redis = "^4.6.0"
types-PyYAML = "^6.0.12"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "pinecone.*",
    "sentence_transformers.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 88
